--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -10,3 +10,24 @@ h1 {
 .header-add-msg-btn {
   margin-top: 15px;
 }
+
+@media only screen 
+  and (min-device-width: 370px) 
+  and (max-device-width: 812px)  { 
+
+    h1 {
+      font-size: 20px;
+      display: flex;
+      justify-content: center;
+    }
+    .header {
+      display: flex;
+      flex-direction: column;
+      z-index: 1;
+    }
+
+    .sub-header {
+      display: none;
+    }
+
+}
