--- a/src/component/NotesContainer/NotesContainer.css
+++ b/src/component/NotesContainer/NotesContainer.css
@@ -77,3 +77,31 @@ and (max-width: 2000px)  {
   
 }
 
+@media only screen 
+  and (min-device-width: 370px) 
+  and (max-device-width: 812px)  { 
+    .notes-container {
+      border: 1px solid #d9d9d9;
+      display: block;
+      margin-left: 0px; 
+      margin-right: 0px;
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+
+    .ant-layout.ant-layout-has-sider > .ant-layout, .ant-layout.ant-layout-has-sider > .ant-layout-content {
+      width: 100%;
+    }
+
+    .note {
+      /* flex: 25% 1; */
+      padding: 10px;
+      margin: 10px;
+      flex-basis: 45%;
+    }
+
+    .date {
+      display: none;
+    }
+}
