--- a/src/component/NotesContainer/NotesContainer.css
+++ b/src/component/NotesContainer/NotesContainer.css
@@ -88,13 +88,9 @@ and (max-width: 2000px)  {
   and (min-device-width: 370px)
   and (max-device-width: 812px)  {
     .notes-container {
-      border: 1px solid #d9d9d9;
-      display: block;
-      margin-left: 0px;
-      margin-right: 0px;
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      margin-top: 25px;
     }
 
     .ant-layout.ant-layout-has-sider > .ant-layout, .ant-layout.ant-layout-has-sider > .ant-layout-content {
