--- a/src/component/NotesContainer/NotesContainer.css
+++ b/src/component/NotesContainer/NotesContainer.css
@@ -102,6 +102,7 @@ and (max-width: 2000px)  {
       display: flex;
       justify-content: center;
       margin-top: 25px;
+      /* padding-bottom: 250px; */
     }
 
     .ant-layout.ant-layout-has-sider > .ant-layout, .ant-layout.ant-layout-has-sider > .ant-layout-content {
